# cashcontrol

./: .gitignore  Cargo.toml
src/: cli.rs  main.rs  services.rs
src/domain/: budget.rs  mod.rs  money.rs  transaction.rs
src/storage/: json.rs  mod.rs
src/use_cases/: mod.rs
