[package]
name = "cashcontrol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4.41", features = ["serde"] }
anyhow = "1.0.99"
clap = { version="4.5.47", features = ["derive"] }
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["full"] }